[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu/join_menu.gd" type="Script" id=1]

[node name="JoinMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 445.0
margin_top = 250.0
margin_right = 579.0
margin_bottom = 349.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 134.0
margin_bottom = 14.0
text = "Join"
align = 1

[node name="Servers" type="ItemList" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 134.0
margin_bottom = 27.0
auto_height = true

[node name="Add" type="Button" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 134.0
margin_bottom = 51.0
text = "Add"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 134.0
margin_bottom = 75.0

[node name="Join" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 20.0
disabled = true
text = "Join"

[node name="Edit" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 20.0
disabled = true
text = "Edit"

[node name="Delete" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 79.0
margin_right = 134.0
margin_bottom = 20.0
disabled = true
text = "Delete"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 134.0
margin_bottom = 99.0
text = "Back"

[connection signal="item_selected" from="VBoxContainer/Servers" to="." method="_on_server_selected"]
[connection signal="pressed" from="VBoxContainer/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
